css/style.css
body{
  background-color: #DFEEEA;
  margin: 0;
  text-align: center;
}
h1{
  color: #1e836c  ; /*   1e836c D3DEDC */
  font-family: 'Sacramento', cursive;
  font-size: 50px;
}

hr{
  position: relative;
  background-color: #F7F7F7;
  border-style: dotted none none;
  border-color: grey;
  border-width: 5px;
  width: 5%;
}

.top{
  position: relative;
  padding-top: 80px;
  padding-left: 320px;
  padding-right: 300px;
}

.top_cloud{
  position: absolute;
  right: 300px;
  top:50px;
}
.bottom_cloud{
position: absolute;
left: 300px;
bottom: 300px;
}

.hill_img{
position: relative;
top:50px;
padding-bottom: 50px;
}

.middle{
  margin-top:  20px;
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: #F7F7F7;
}


.intro{
  width: 50%;
  margin: auto;
  background-color: #F7F7F7;
  position: relative;
  line-height: 1.5;
}

.IntroHi{
  margin-bottom: 20px;
}

.skills{
  background-color: #F7F7F7;
  padding-top: 20px;
  padding-bottom: 20px;
}

.skills_row{
  width: 50%;
  margin: 100px auto 100px auto;
}

.sqlimage{
  width: 3%;
}

.powerbi{
  width: 3%;
}

.python{
  width: 3%;
}

.machine{
  width: 3%;
}

.education{
  background-color: #F7F7F7;
  padding-top: 20px;
  padding-bottom: 20px;
}

.bottom{
  margin-top: 20px;
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: #DFEEEA;
}

.higher-education{
  color: #45b29a;
  font-size: 1.5em;
}

.inter-education{
  color: #45b29a;
  font-size: 1.5em;
}

.footer-link-git{
  margin-left: 15px;
  font-family:"Montserrat", sans-serif;
  text-decoration: none;
}

.footer-link-linkedin{
font-family:"Montserrat", sans-serif;
text-decoration: none;
}

.rserved{
  padding-top: 20px;
  text-decoration: none;
}

a {
    color: #45b29a;
    border-bottom: 1px solid #45b29a;
    font-size: 1em;
    text-decoration: none;
}

a:hover{
  color: #1e836c ;
}

p {
    text-align: center;
    color: #45b29a;
    font-weight: 400;
    margin: 0;
    font-size: 1.5em;
    padding: 0 0 0;
}

h3 {
    color: #1e836c;
    text-align: center;
    font-size: 3em;
    font-weight: 400;
}

h2 {
    color: #1e836c;
    text-align: center;
    font-size: 3em;
    font-weight: 400;


}

h5 {
    color: #1e836c;
}

